codegen/ui_tests/first_shared_ref.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: references from Rhai in this position must be mutable
  --> ui_tests/first_shared_ref.rs:11:23
   |
11 | pub fn test_fn(input: &NonClonable) -> bool {
   |                       ^^^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/first_shared_ref.rs:22:8
   |
22 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
